--- a/plugins/status/app/views/status/_status_summary.html.erb
+++ b/plugins/status/app/views/status/_status_summary.html.erb
@@ -1,7 +1,7 @@
 <div class="status_status">
   <% unless status %>
     <img src="/images/button_warning.png" alt="warning icon" />
-    <%= _("Error occur during loading status information.") %>
+    <%= _("Error occured during loading status information.") %>
   <% else %>
     <% link_to "status" do %>
       <% if !status.blank? %>
