Changed position of elements in header * addes new logo

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -32,7 +32,7 @@
     
     <div id="header">
       
-      <img src="/images/geckohead-green.png" alt="SUSE" />
+      <img src="/images/webyast-logo.png" alt="webyast" />
       
       <h1>My Appliance</h1>
 
