--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -70,13 +70,6 @@ input:focus {
 ul li {
   padding: 3px;
 }
-/*  ul li ul {
-    padding: 0;
-    margin: 0;
-  }
-  ul li li {
-    padding: 0;
-  }*/
 /* == Basic Structure ===================================================== */
 
 /*#header,*/
@@ -96,22 +89,27 @@ ul li {
   border-bottom: 1px solid #39f;
   border-bottom: 1px solid #06c;
   height: 50px;
+  text-align: center;
 }
   #header h1,
   #header img {
-    float: left;
   }
   #header h1 {
-    margin: 10px 1em;
+    margin: 0;
+    padding-top: 13px;
   }
   #header img {
     margin: 2px 1em 0;
+    position: absolute;
+    top: 2px;
+    left: 0;
   }
   #login-wrapper {
-    position: relative;
-    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
-  
+
 #content {
   min-height: 600px;
   margin-top: 2em;
@@ -132,7 +130,7 @@ ul li {
 
 #login-wrapper ul {
   list-style: none outside;
-  margin: 5px 0 0;
+  margin: 0;
   font-size: 0.7em;
 }
 #login-wrapper ul * {
