added back buttons

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -50,6 +50,7 @@
   <p><label for="user"><%=_("User")%></label>
   <input type="text" name="user" size=25 value=<%= "#{@current_user}" %> >
   <%= submit_tag _("Search"), :disabled=> !@right_get_permissions, :onclick=>"Element.show('progress')"%>
+  <a href="/" class="button"><%=_("Back")%></a>
 <% end %>
 <br>
 <br>
@@ -149,11 +150,11 @@
      <body>
        <div id="setpermission"></div>
        <%= submit_tag _("Set"), :disabled=> !@right_set_permissions, :onclick=>"Element.show('progress')"%>
+       <a href="/" class="button"><%=_("Back")%></a>
      </body>
     </td>
     </tr>
    </table>
  <% end %>
 <% end %>
-
 </html>
