--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -40,5 +40,8 @@
 </table>
 <%= submit_tag _("Save"), :disabled=> disabled, :class => 'button' -%>
 <% end -%>
+<br>
+<a href="/" class="button"><%=_("Back")%></a>
+<br>
 
 
