--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -34,8 +34,9 @@
 <br>
 <br>
 <%= button_to  _("edit limits"),  :action => :edit, :class => "button" %>
-
-
+<br>
+<%= button_to _("Back"), :back %>
+<br>
 <script type="text/javascript">
 
 
