Status page - sort items by name
Sorting helps to display similar items together, like "cpu0 cpu1 load"
onstead of e.g. "cpu1 load cpu0"

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -2,7 +2,9 @@
 <h1>Status</h1>
 
 <% column = 1 %>
-<% @data_group.each do |key, map| %>
+<% groups = @data_group.keys.sort %>
+<% groups.each do |key| %>
+  <% map = @data_group[key]%>
   <% if column != 1 %>
     <br style='clear: both'>
     <br>
