Fix warning message

--- a/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
@@ -1,7 +1,7 @@
 <div class="status_patches">
   <% unless patch %>
     <div class="status-icon warning"></div>
-    <%= _("Error occur during loading patch information.") %>
+    <%= _("An error occured when loading patch information.") %>
 
   <% else %>
     <% link_to "patch_updates" do %>
