--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -1,4 +1,6 @@
-<h1><%=_("Network Device")%></h1>
+<div class='plugin-icon'><img src='/icons/yast-network.png'/></div>
+<div class='plugin-content'>
+<h2><%=_("Network Device")%></h2>
 
 <table class="list">
   <tr>
@@ -14,4 +16,5 @@
 
 
 <a href="/" class="button"><%=_("Back")%></a>
+</div>
 
