--- a/plugins/securities/app/views/securities/create.erb
+++ b/plugins/securities/app/views/securities/create.erb
@@ -1,3 +1,6 @@
+<div class='plugin-icon'><img src='/icons/yast-security.png'/></div>
+<div class='plugin-content'>
+
 <h2><%=_("Security")%></h2>
 
 <% form_tag '/security/update' do %>
@@ -29,4 +32,4 @@
   </span>
 </span>
 <% end %>
-
+</div>
