--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -1,5 +1,6 @@
-
-<h1>Status</h1>
+<div class='plugin-icon'><img src='/images/monitoring.png'/></div>
+<div class='plugin-content'>
+<h2>Status</h2>
 
 <% column = 1 %>
 <% @data_group.keys.sort.each do |key| %>
@@ -39,6 +40,7 @@
 <br>
 <%= button_to _("Back"), :back %>
 <br>
+</div>
 <script type="text/javascript">
 
 
