--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -400,3 +400,13 @@ input.button {
 .alt-bg {
   background-color: #f9f9f9;
 }
+
+.plugin-icon {
+  float: left;
+  margin: 1em;
+}
+
+.plugin-content {
+  float: left;
+  width: 90%;
+}
