--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -44,7 +44,10 @@
 
   <link rel="stylesheet" href="/inc/checktree/checktree.css" type="text/css" media="screen" title="default" charset="utf-8" />
  </head>
-<h1><%=_("User Permissions")%></h1>
+<div class='plugin-icon'><img src='/icons/yast-security.png'/></div>
+<div class='plugin-content'>
+
+<h2><%=_("User Permissions")%></h2>
 <br>
 <% form_tag '/permissions/search' do %>
   <p><label for="user"><%=_("User")%></label>
@@ -157,4 +160,6 @@
    </table>
  <% end %>
 <% end %>
+</div>
 </html>
+
