--- a/plugins/samba_server/app/views/samba_server/index.html.erb
+++ b/plugins/samba_server/app/views/samba_server/index.html.erb
@@ -1,3 +1,7 @@
-<h1><%=_("Exported Samba Shares")%></h1>
+<div class='plugin-icon'><img src='/icons/yast-online_update.png'/></div>
+<div class='plugin-content'>
+<h2><%=_("Exported Samba Shares")%></h2>
 
 <%= html_simple_table([_("Samba Shares")], @shares, [:id], {:add => @permissions[:addshare], :edit => @permissions[:editshare], :delete => @permissions[:deleteshare], :id => :id})%>
+</div>
+
