--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -33,7 +33,10 @@
 </div>
 <!-- end: dialog box -->
 
-<h1><%=_("Services")%></h1>
+<div class='plugin-icon'><img src='/icons/yast-online_update.png'/></div>
+<div class='plugin-content'>
+
+<h2><%=_("Services")%></h2>
 <br>
 
 <% if ! @permissions[:execute] %>
@@ -65,3 +68,5 @@
 </li>
 <% end %>
 </ul>
+
+</div>
