--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -11,7 +11,8 @@
   <% disabled = ! @permissions[:write] %>
 
 
-
+  <div class='plugin-icon'><img src='/icons/yast-ntp-client.png'/></div>
+  <div class='plugin-content'>
   <h2><%=_("Configure timezone")%></h2>
   <% form_tag '/system_time/update_timezone', :class => 'container' do %>
     <table summary="<%= _("Table for settings timezone for target machine.") %>">
@@ -108,6 +109,7 @@
       </tr>
     </table>
   <% end %>
+  </div>
 
   <%= observe_field(:region,
     :frequency => 0.25,
@@ -115,3 +117,4 @@
     :url => { :action => :timezones_for_region },
     :with => "'disabled=' + "+ (disabled ? "true":"false")+" + '&value=' +value") %>
 <% end %>
+
