--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
-<h1><%=_("Local User")%></h1>
+<div class='plugin-icon'><img src='/icons/yast-users.png'/></div>
+<div class='plugin-content'>
+
+<h2><%=_("Local User")%></h2>
 
 <table class="list">
   <tr>
@@ -28,3 +31,6 @@
 <% end %>
 
 <a href="/" class="button"><%=_("Back")%></a>
+
+</div>
+
