--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -104,6 +104,10 @@ ul li {
     top: 2px;
     left: 0;
   }
+  #header ul.header-links {
+    float: right;
+    vertical-align: bottom;
+  }
   #login-wrapper {
     position: absolute;
     top: 0;
