--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -12,29 +12,31 @@
 
   <% @data_group.each do |key, map| %>
     <% map.each do |graph_key, list_value| %>
-      <tr>
-      <% limit_key = "/#{key}/#{graph_key}" %>
-      <td><%= limit_key %></td>
+      <% if key != "df" || !graph_key.end_with?("used") %>
+        <tr>
+        <% limit_key = "/#{key}/#{graph_key}" %>
+        <td><%= limit_key %></td>
 
-      <% if  @limits_list.has_key?(limit_key)  %>
-        <td>
-        <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][0][1] %>>
-        </td>
-        <td>
-        <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
-          <%= @limits[limit_key]["maximum"] ? "checked" : "" %>
-         <%= "disabled=\"disabled\"" if disabled %> />
-        </td>
-      <% else %>
-        <td>
-        <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=0>
-        </td>
-        <td>
-        <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
-         <%= "disabled=\"disabled\"" if disabled %> />
-        </td>
+        <% if  @limits_list.has_key?(limit_key)  %>
+          <td>
+          <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][0][1] %>>
+          </td>
+          <td>
+          <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
+            <%= @limits[limit_key]["maximum"] ? "checked" : "" %>
+           <%= "disabled=\"disabled\"" if disabled %> />
+          </td>
+        <% else %>
+          <td>
+          <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=0>
+          </td>
+          <td>
+          <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
+           <%= "disabled=\"disabled\"" if disabled %> />
+          </td>
+        <% end %>
+        </tr>
       <% end %>
-      </tr>
     <% end %>
   <% end %>
 </table>
