really back link

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -38,7 +38,7 @@
 <br>
 <%= button_to  _("Edit limits"),  :action => :edit, :class => "button" %>
 <br>
-<%= button_to _("Back"), :back %>
+<a href="/" class="button"><%=_("Back")%></a>
 <br>
 </div>
 <script type="text/javascript">
