beautify systemtime plugin align saves and put some space between save and form align input fields to same width

--- a/plugins/systemtime/app/views/system_time/_timezones.rhtml
+++ b/plugins/systemtime/app/views/system_time/_timezones.rhtml
@@ -8,4 +8,4 @@ region.entries.each() do |timezone|
 end
 %>
 <%= select_tag "timezone",
-  options_for_select(list, central), :disabled=> disabled %>
+  options_for_select(list, central), :disabled=> disabled, :class=>'aligned-inputs' %>
