make webyast logo into a link to "/" user expects top-left logo to work. Linking to "/" make user go to /hosts if not logged in or to /controlpanel if logged in

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -32,7 +32,7 @@
     
     <div id="header">
       
-      <img src="/images/webyast-logo.png" alt="webyast" />
+      <a href="/"><img src="/images/webyast-logo.png" alt="webyast" /></a>
       
       <h1>My Appliance</h1>
 
