beautify status page: use the nice form buttons, center checkboxes in edit form

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -36,8 +36,7 @@
 <% end %>
 <br>
 <br>
-<%= button_to  _("Edit limits"),  :action => :edit, :class => "button" %>
-<br>
+<%= link_to  _("Edit limits"), '/status/edit', :class => "button" %>
 <a href="/" class="button"><%=_("Back")%></a>
 <br>
 </div>
