--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -1,5 +1,6 @@
 <% disabled = ! @permissions[:writelimits] %>
-
+<div class='plugin-icon'><img src='/images/monitoring.png'/></div>
+<div class='plugin-content'>
 <h2><%=_("Configure Status Limits")%></h2>
 
 <% form_tag '/status/save' do %>
@@ -21,7 +22,7 @@
           <td>
           <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][0][1] %>>
           </td>
-          <td>
+          <td class="checkbox">
           <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
             <%= @limits[limit_key]["maximum"] ? "checked" : "" %>
            <%= "disabled=\"disabled\"" if disabled %> />
@@ -30,7 +31,7 @@
           <td>
           <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=0>
           </td>
-          <td>
+          <td class="checkbox">
           <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
            <%= "disabled=\"disabled\"" if disabled %> />
           </td>
@@ -41,9 +42,7 @@
   <% end %>
 </table>
 <%= submit_tag _("Save"), :disabled=> disabled, :class => 'button' -%>
+<a href="/status" class="button"><%=_("Back")%></a>
 <% end -%>
-<br>
-<a href="/" class="button"><%=_("Back")%></a>
-<br>
-
+</div>
 
