--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -17,7 +17,8 @@
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.ui.custom.js"></script>
 
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
-  
+  <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.validate.js"></script>
+
   <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>-->
