improved layout; added more user information

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -36,10 +36,14 @@
 <% end %>
 <br>
 <br>
-<%= link_to  _("Edit limits"), '/status/edit', :class => "button" %>
+<%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
 <a href="/" class="button"><%=_("Back")%></a>
 <br>
+<br>
+<h4><%= _("These values have been evaluated the last 5 minutes.") %></h4>
+<br>
 </div>
+
 <script type="text/javascript">
 
 
