--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -4,7 +4,7 @@
   <div class="dialoge-sub-wrapper">
   
     <h2>Please choose a service:</h2>
-    <ul class="list-2level-inline alternate-row">
+    <ul class="list-2level-inline alternate-rows">
       <% for host in @hosts %>
       <li>
         <ul>
