create validate html to pass tidy (still problem with link inside div)

--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -13,7 +13,7 @@
   <% disabled = ! @permissions[:write] %>
 
 
-  <div class='plugin-icon'><img src='/icons/yast-ntp-client.png'/></div>
+  <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/></div>
   <div class='plugin-content'>
   <h2><%=_("Configure timezone")%></h2>
   <% form_tag '/system_time/update_timezone', :class => 'container' do %>
