--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -72,4 +72,5 @@
     </div>
 
     <div id="footer" class="">
-      <div class="copy">&copy; 2009 Novell, Inc.</di
+      <div class="copy">&copy; 2009 Novell, Inc.</div>
+    </div>
