--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -7,7 +7,21 @@
     });
   <% end -%>
 
-
+  <!--- FIXME move javascript function outside of index --->
+  <% javascript_tag do -%>
+    function submitTime() {
+      if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
+        alert ("<%= _("Invalid date format. Correct one is dd/mm/yyyy") %>");
+        return false;
+      }
+      if (!$("#currenttime")[0].value.match( /^\d{2}:\d{2}:\d{2}$/)) {
+        alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
+        return false;
+      }
+      Element.show('progress');
+      return true;
+    };
+  <% end -%>
 
   <%= javascript_include_tag :defaults %>
   <% disabled = ! @permissions[:write] %>
@@ -98,7 +112,7 @@
       </tr>
     </table>
     <p>
-      <%= submit_tag _("Save"), :onclick=>"Element.show('progress')",
+      <%= submit_tag _("Save"), :onclick=>"return submitTime()",
                                 :disabled=> disabled, :class => 'button' -%>
     </p>
   <% end %>
