fix hyphens in comment

--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -7,7 +7,7 @@
     });
   <% end -%>
 
-  <!--- FIXME move javascript function outside of index --->
+  <!-- FIXME move javascript function outside of index -->
   <% javascript_tag do -%>
     function submitTime() {
       if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
