update documentation in language and time frontend

--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -3,7 +3,7 @@
 <h2><%=_("Language")%></h2>
 <br/>
 
-<% form_tag '/language/commit_language' do -%>
+<% form_tag '/language/update' do -%>
   <table summary="<%= _("This table gives language settings description and current value for it") %>">
   <tr><td colspan="2" class="full" align="center"><strong> <%=_("Settings")%></strong></td></tr>
   <tr>
