--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -19,7 +19,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Home Directory")%></strong></td>
-	<td class="last"><%= f.text_field :homeDirectory %></td>
+	<td class="last"><%= f.text_field :home_directory %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("do NOT create home directory")%></strong></td>
@@ -27,7 +27,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Login Shell")%></strong></td>
-	<td class="last"><%= f.text_field :loginShell %></td>
+	<td class="last"><%= f.text_field :login_shell %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Login Name")%></strong></td>
@@ -35,11 +35,11 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("UID Number")%></strong></td>
-	<td class="last"><%= f.text_field :uidNumber %></td>
+	<td class="last"><%= f.text_field :uid_number %></td>
     </tr>
     <tr>
 	<td class="first"><strong><%=_("Password")%></strong></td>
-	<td class="last"><%= f.text_field :userPassword %></td>
+	<td class="last"><%= f.text_field :user_password %></td>
     </tr>
     </table>
     <p><%= f.submit _("Create"), :onclick=>"Element.show('progress')" %><%= link_to _('Back'), users_path, :onclick=>"Element.show('progress')", :class => "button" %></p>
