Warn for unsupported browsers (fate #306686)
Designers can check/clean the style for now.

Idea from
http://think2loud.com/build-an-unsupported-browser-warning-with-jquery/

plus enhanced browser detection from this plugin:
http://davecardwell.co.uk/javascript/jquery/plugins/jquery-browserdetect/

which gives us more granularity

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -19,6 +19,10 @@
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.validate.js"></script>
 
+  <!-- browser detection -->
+  <script type="text/javascript" charset="utf-8" src="/javascripts/jqbrowser-compressed.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.badbrowser.js"></script>
+
   <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>-->
