--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -31,6 +31,9 @@
   <script type="text/javascript" charset="utf-8" src="/inc/yast.widgets.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/yast.helpers.js"></script>
 
+  <!-- custom page scripts and css -->
+  <%= yield :head %>
+
   <title>WebYaST</title>
 </head>
   <body id="shell" onload="">
