use yield instead of deprecated @content_for_layout

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -75,7 +75,7 @@
           <%= image_tag("/images/working.gif") %><%=_("...Wait...")%>
         </div>
 
-      <%= @content_for_layout %>
+      <%= yield %>
     </div>
 
     <div id="footer" class="">
